update user.css to prevent box shadows from wrapping around wrap lines

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -10,7 +10,7 @@
 }
 
 .masonry-container {
-  padding-top: 50px;
+  padding-top: 30px;
   padding-bottom: 140px;
   background-color: inherit;
 }
@@ -20,15 +20,14 @@
  -webkit-column-width: 13em;
  -moz-column-gap: 1em;
  -webkit-column-gap: 1em; 
-  
 }
 
 .masonry-item {
  display: inline-block;
- margin: 0 0 1em;
+ margin: 10px 0 0 0;
  width:  100%; 
  background:  #efefef;
- box-shadow: 2px 2px 4px 0 #7b7b7b;
+ box-shadow: 1px 1px 2px 0 #7b7b7b;
 }
 
 .masonry-item img {
